feat: add admin handler CreateTeam
