# internal/delivery/http/dto/admin/request/create_team.go
@@ -1,0 +1,7 @@
+package request
+
+type CreateTeamRequest struct {
+	Username string `json:"username"`
+	Login 	 string `json:"login"`
+	Password string `json:"password"`
+}
