# internal/delivery/http/dto/admin/response/create_team.go
@@ -1,0 +1,7 @@
+package response
+
+type CreateTeamResponse struct {
+	TraderID 		string 		`json:"trader_id"` 
+	AccessToken 	string 		`json:"access_token"`
+	WalletAddress 	string 		`json:"wallet_address"`
+}
