# internal/delivery/http/dto/order/response/create_order.go
@@ -27,13 +27,14 @@ type BankDetail struct {
 }
 
 type Order struct {
-	OrderID 	 string     `json:"order_id"`
-	Status  	 string     `json:"status"`
-	AmountFiat 	 float64    `json:"amount_fiat"`
-	AmountCrypto float64    `json:"amount_crypto"`
-	ExpiresAt    time.Time  `json:"expires_at"`
-	BankDetail   BankDetail `json:"bank_detail"`
-	TraderReward float64	`json:"trader_reward"`
-	CreatedAt 	 time.Time	`json:"created_at"`
-	UpdatedAt    time.Time  `json:"updated_at"`
+	OrderID 	 	string     `json:"order_id"`
+	Status  	 	string     `json:"status"`
+	AmountFiat 	 	float64    `json:"amount_fiat"`
+	AmountCrypto 	float64    `json:"amount_crypto"`
+	ExpiresAt    	time.Time  `json:"expires_at"`
+	BankDetail   	BankDetail `json:"bank_detail"`
+	TraderReward 	float64		`json:"trader_reward"`
+	CryptoRubRate   float64		`json:"crypto_rub_rate"`
+	CreatedAt 	 	time.Time	`json:"created_at"`
+	UpdatedAt    	time.Time  `json:"updated_at"`
 }
