# internal/delivery/http/dto/payment/response/create_h2h_pay_in.go
@@ -13,6 +13,7 @@ type CreateH2HPayInResponse struct {
 	ExpiresAt 		int64 		   `json:"expires_at"`
 	TPayLink 		string 		   `json:"tpay_link"`
 	Recalculated	bool		   `json:"recalculated"`
+	CryptoRubRate 	float64	   `json:"crypto_rub_rate"`
 }
 
 type NoBankDetailsErrorResponse struct {
