# pkg/docs/swagger.yaml
@@ -253,6 +253,15 @@ definitions:
       ttl:
         type: string
     type: object
+  request.CreateTeamRequest:
+    properties:
+      login:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   request.CreateWalletRequest:
     properties:
       traderId:
@@ -421,6 +430,8 @@ definitions:
         type: number
       callback_url:
         type: string
+      crypto_rub_rate:
+        type: number
       currency:
         type: string
       expires_at:
@@ -451,6 +462,15 @@ definitions:
       order_id:
         type: string
       order_status:
+        type: string
+    type: object
+  response.CreateTeamResponse:
+    properties:
+      access_token:
+        type: string
+      trader_id:
+        type: string
+      wallet_address:
         type: string
     type: object
   response.CreateWalletErrorResponse:
@@ -514,6 +534,8 @@ definitions:
         type: number
       callback_url:
         type: string
+      crypto_rub_rate:
+        type: number
       currency:
         type: string
       expires_at:
@@ -636,6 +658,8 @@ definitions:
         $ref: '#/definitions/github_com_LavaJover_shvark-api-gateway_internal_delivery_http_dto_order_response.BankDetail'
       created_at:
         type: string
+      crypto_rub_rate:
+        type: number
       expires_at:
         type: string
       order_id:
@@ -755,6 +779,38 @@ info:
   title: Shvark API Gateway
   version: "1.0"
 paths:
+  /admin/teams:
+    post:
+      consumes:
+      - application/json
+      description: Create new team
+      parameters:
+      - description: team credentials
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateTeamRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.CreateTeamResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create new team
+      tags:
+      - admin
   /banking/details:
     patch:
       consumes:
